--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,6 +6,17 @@
   background-color: #111827;
 }
 
+.btn-primary {
+  background-color: #0d6efd;
+  color: white
+}
+
+.btn-outline-dark.disabled, .btn-outline-dark:disabled {
+  background-color: #0d6efd !important;
+  color: #ffffff !important;
+  border: 1  !important;
+}
+
 .bg-grey {
   background-color: #e3e3e3;
 }
@@ -21,4 +32,34 @@
 .loading-gif {
   width: 3rem;
   height: 3rem;
+}
+
+.search-bar {
+  display: flex;
+  align-items: flex-end;
+}
+
+.box01{
+  width: 100%;
+  height: 75px;
+  background: white;
+  display: flex;
+  align-items: flex-end;
+}
+
+.box02{
+  width: 100%;
+  height: 75px;
+  margin-top: 20px;
+}
+
+.box03{
+  width: 50%;
+  height: 75px;
+  margin-top: 20px;
+}
+
+.box04{
+  width: 50px;
+  height: 75px;
 }
