--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,7 @@
+body {
+  padding-right: 0 !important
+}
+
 .navbar-custom {
   background-color: #1f2937;
 }
@@ -40,26 +44,26 @@
 }
 
 .box01{
-  width: 100%;
-  height: 75px;
-  background: white;
-  display: flex;
-  align-items: flex-end;
+  text-align: right;
 }
 
 .box02{
-  width: 100%;
-  height: 75px;
-  margin-top: 20px;
+  text-align: left;
 }
 
-.box03{
-  width: 50%;
-  height: 75px;
-  margin-top: 20px;
+.content{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
 }
 
-.box04{
-  width: 50px;
-  height: 75px;
+@media screen and (max-width: 480px) {
+  .content{
+    grid-template-columns: 1fr;
+    color: red;
+  }
+}
+
+.select-align {
+  text-align: center;
 }
